更新脚本